<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BagOfDice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_dice">Select Dice</string>
    <string name="de4">D4</string>
    <string name="de6">D6</string>
    <string name="de8">D8</string>
    <string name="de10">D10</string>
    <string name="de12">D12</string>
    <string name="de20">D20</string>
    <string name="roll_action">Roll!</string>

</resources>
