<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RollSelect$PlaceholderFragment">

    <TextView
        android:text="@string/select_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dieSelectLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de4"
        android:id="@+id/d4_Label"
        android:layout_below="@+id/dieSelectLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de6"
        android:id="@+id/d6_Label"
        android:layout_below="@+id/d4_Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de8"
        android:id="@+id/d8_Label"
        android:layout_below="@+id/d6_Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de10"
        android:id="@+id/d10_Label"
        android:layout_below="@+id/d8_Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de12"
        android:id="@+id/d12_Label"
        android:layout_below="@+id/d10_Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/de20"
        android:id="@+id/d20_Label"
        android:layout_below="@+id/d12_Label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d4_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d4_Label"
        android:layout_toRightOf="@+id/dieSelectLabel"
        android:layout_toEndOf="@+id/dieSelectLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d6_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d6_Label"
        android:layout_alignLeft="@+id/d4_Number"
        android:layout_alignStart="@+id/d4_Number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d8_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d8_Label"
        android:layout_alignLeft="@+id/d4_Number"
        android:layout_alignStart="@+id/d4_Number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d10_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d10_Label"
        android:layout_alignLeft="@+id/d4_Number"
        android:layout_alignStart="@+id/d4_Number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d12_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d12_Label"
        android:layout_alignLeft="@+id/d4_Number"
        android:layout_alignStart="@+id/d4_Number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/d20_Number"
        android:width="@dimen/number_Field_Width"
        android:layout_alignTop="@+id/d20_Label"
        android:layout_alignLeft="@+id/d4_Number"
        android:layout_alignStart="@+id/d4_Number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_action"
        android:id="@+id/roll_Button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/d8_Number"
        android:layout_alignStart="@+id/d8_Number"
        android:layout_marginBottom="31dp"
        android:layout_alignRight="@+id/d20_Number"
        android:layout_alignEnd="@+id/d20_Number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d4Total"
        android:layout_alignTop="@+id/d4_Number"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d6Total"
        android:layout_alignTop="@+id/d6_Number"
        android:layout_alignLeft="@+id/d4Total"
        android:layout_alignStart="@+id/d4Total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d8Total"
        android:layout_alignTop="@+id/d8_Number"
        android:layout_alignLeft="@+id/d6Total"
        android:layout_alignStart="@+id/d6Total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d10Total"
        android:layout_alignTop="@+id/d10_Number"
        android:layout_alignLeft="@+id/d8Total"
        android:layout_alignStart="@+id/d8Total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d12Total"
        android:layout_alignTop="@+id/d12_Number"
        android:layout_alignLeft="@+id/d10Total"
        android:layout_alignStart="@+id/d10Total" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/d20Total"
        android:layout_alignTop="@+id/d20_Number"
        android:layout_alignLeft="@+id/d12Total"
        android:layout_alignStart="@+id/d12Total" />

</RelativeLayout>
